compute raw age/length comps + caal
create code to compute comps and caal (Rmd) + compare them to 2017 assessment (***compsCOMP.png) + plots from plot_comps()
+ add plot comparing input sample size with 2017

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,17 @@
 Data/raw/confidential
 
 
+Rcode/length_age_comps/trash/Commercial_CA.HKL_length_compsCOMP.png
+Rcode/length_age_comps/trash/Commercial_CA.HKL_length_compsDIFF.png
+Rcode/length_age_comps/trash/Commercial_CA.HKL_length_compsDIFF2.png
+Rcode/length_age_comps/trash/Commercial_CA.TWL_length_compsCOMP.png
+Rcode/length_age_comps/trash/Commercial_CA.TWL_length_compsDIFF.png
+Rcode/length_age_comps/trash/Commercial_CA.TWL_length_compsDIFF2.png
+Rcode/length_age_comps/trash/Commercial_ORWA.HKL_age_compsDIFF.png
+Rcode/length_age_comps/trash/Commercial_ORWA.HKL_length_compsCOMP.png
+Rcode/length_age_comps/trash/Commercial_ORWA.HKL_length_compsDIFF.png
+Rcode/length_age_comps/trash/Commercial_ORWA.HKL_length_compsDIFF2.png
+Rcode/length_age_comps/trash/Commercial_ORWA.TWL_age_compsDIFF.png
+Rcode/length_age_comps/trash/Commercial_ORWA.TWL_length_compsCOMP.png
+Rcode/length_age_comps/trash/Commercial_ORWA.TWL_length_compsDIFF.png
+Rcode/length_age_comps/trash/Commercial_ORWA.TWL_length_compsDIFF2.png
