--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ Data/raw/confidential
 *CumReport.sso
 *echoinput.sso
 *fmin.log
-*gradient.*
+*gradient*
 *ParmTrace.sso
 *posterior_obj_func.sso
 *posterior_vectors.sso
