--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ Rcode/length_age_comps/trash/Commercial_ORWA.TWL_age_compsDIFF.png
 Rcode/length_age_comps/trash/Commercial_ORWA.TWL_length_compsCOMP.png
 Rcode/length_age_comps/trash/Commercial_ORWA.TWL_length_compsDIFF.png
 Rcode/length_age_comps/trash/Commercial_ORWA.TWL_length_compsDIFF2.png
+/Data/processed/length_age_comps/old
+/Data/raw/nonconfidential/wcgop/prev
+/Rcode/length_age_comps/beforeWCGOP
+/Rcode/length_age_comps/ready
